Styles fixed to match contigo site styles

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <link rel="stylesheet" href="https://devcontigo.skandia.co/o/skdisttheme-theme/css/main.css?browserId=chrome&themeId=skdisttheme_WAR_skdistthemetheme&languageId=es_ES&t=1755630110000">
     <!-- Librería de estilos -->
 <link rel="stylesheet" href="https://skcoblobresources.blob.core.windows.net/styles/sk-desing-main.css">
 <!-- CDN de iconos Skandia -->
